@@ -7,6 +7,7 @@
 - Rename will mark the resulting relation as readonly and subsequent updates, insert, updates or deletes will actually copy the content
 - Added testsuite
 - Fixed python expression tokenization, now uses native tokenizer
+- Fixed optimization involving selection and parenthesis in the expression (Rev 260)
 
 0.11
 - Font is set only on windows (Rev 206)
@@ -18,7 +19,7 @@
 - Added .desktop file on svn (Rev 216)
 - Automatically fills some fields in the survey (Rev 217)
 - When a query fails, shows the message of the exception (Rev220)
-- Improved tokenizer for select in optimizations, now can accept operators in identifiers (Rev220)
+- Improved tokenizer for select in optimizations, now can accept operators in identifiers (Rev 220)
 - Uses getopt to handle the command line in a more standard way
 - Organized code so the ui can be either qt or command line
 - Does not depend on QT anymore
